--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
 NODE_ENV=development
-DEV_DATABASE_URL='postgresql://postgres:Freedom2019@localhost:5432/potluck'
-TESTING_DATABASE_URL='postgresql://postgres:Freedom2019@localhost:5432/potluck_test'
+DEV_DATABASE_URL='postgresql://postgres:Basalisk1!@localhost:5433/potluck'
+TESTING_DATABASE_URL='postgresql://postgres:Basalisk1!@localhost:5433/potluck_test'
